# sentinel-dns

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sentinel-dns.example.toml
.github/workflows/: docker.yml  release.yml
bench/: bench_cache.py  bench_forwarder.py  bench_pi4_projection.py  bench_synthesis.py  spike_b.py
docs/: ARCHITECTURE.md  PROJECT.md  RESEARCH.md  ROADMAP.md  cli.md  configuration.md  decision-cache.md  docker.md  doh-upstream.md  enforcement-mode.md  explanations.md  pi4-projection-results.md  query-log.md  releasing.md  spike-a-results.md  spike-b-results.md  spike-synthesis-results.md  static-blocklist.md
scripts/: train_classifier.py
sentinel_dns/: __init__.py  blocklist.py  cache.py  classifier.py  cli.py  config.py  explain_cmd.py  explanation.py  forwarder.py  query_log.py  tail_cmd.py
