[project]
name = "sentinel-dns"
version = "0.0.0"
description = "AI-assisted DNS resolver — research / spike phase"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Moazzam Sameer" }]
dependencies = [
  "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
sentinel-dns = "sentinel_dns.forwarder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
