[project]
name = "sentinel-dns"
version = "0.0.0"
description = "AI-assisted DNS resolver — research / spike phase"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Moazzam Sameer" }]
dependencies = [
  "dnspython>=2.6",
  "scikit-learn>=1.5",
  "numpy>=2",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
sentinel-dns = "sentinel_dns.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
